---------------------------------------------------------------------------------------------------
Version: 0.5.17
Date: ??.??.??
  Changes:
    - Added custom Better Victory Screen statistics #323
    - Handle Ore Sorting Facility 5 changes #327
      - Stop creating recipe, item, and entity in Sea Block
      - Added migration of removed Sea Block item and entity to new Angel's item and entity
  Bugfixes:
    - Fixed tech steam-power missing a locale in some mod configurations #332
---------------------------------------------------------------------------------------------------
Version: 0.5.16
Date: 27.02.2024
  Changes:
    - Hid solid resin item and recipes #322
  Bugfixes:
    - Landfill tech not ignoring tech cost multiplier #320
    - Milestones error when mod setting Default landfill type set to Landfill #321
---------------------------------------------------------------------------------------------------
Version: 0.5.15
Date: 13.01.2024
  Bugfixes:
    - Fixed Landfill tech being automatically researched #312
    - Fixed AAI Loaders compatibility #315
    - Fixed placement of heavy offshore pumps crashing new seablock maps #317
---------------------------------------------------------------------------------------------------
Version: 0.5.14
Date: 22.12.2023
  Changes:
    - Added support for Early Construction mod #254
    - Added missing prerequisites #295
    - Added support for Grappling Gun mod #308
    - Added support for Jetpack mod #309
    - Wood vs Paper changes #310
      - Replaced recipe Forage for Cellulose Fiber with recipe Forage for Driftwood
      - Reworked tutorial techs, removing paper making
  Bugfixes:
    - Fixed Radar being unlocked by both Military and Radars 1 #296
    - Fixed Exoplanetary Studies Lab recipe not including previous lab tier #303
    - Fixed Wind Turbine energy production graph #304
    - Fixed Washing Plant pipe arrow #305
    - Fixed Companion Drone multiplayer compatibility #307